Simple way to disable annotations

--- a/latex/report.tex
+++ b/latex/report.tex
@@ -7,7 +7,7 @@
 \usepackage[shortlabels]{enumitem}
 \usepackage{graphicx}
 \usepackage{xfrac}
-\usepackage{todonotes}
+\usepackage[disable]{todonotes}
 \usepackage{afterpage}
 \usepackage{amsmath}
 \usepackage[titletoc,title]{appendix}
@@ -96,7 +96,7 @@
 \renewcommand\listingscaption{Code Listing}
 \renewcommand\listoflistingscaption{List of Code Listings}
 
-\colorlet{shadecolor}{blue!15}
+\colorlet{shadecolor}{blue!0}
 %\colorlet{hlcolor}{blue!10}
 
 \DeclareRobustCommand{\hlblu}[1]{{\sethlcolor{shadecolor}\hl{#1}}}
