Write French abstract

--- a/latex/variables.tex
+++ b/latex/variables.tex
@@ -1,1 +1,1 @@
-\newcommand\ThesisTitle{Music demixing with the sliCQ transform}
+\newcommand\ThesisTitle{Music demixing with the sliced Constant-Q Transform}
